Do not use slow CDN and change default configs for encode-decode-worker page

--- a/samples/encode-decode-worker/index.html
+++ b/samples/encode-decode-worker/index.html
@@ -77,11 +77,11 @@
 
 <div id="codecButtons">
 <p>Codec:</p>
-   <input type="radio" id="H264" name="codec" value="H264" onchange="getCodecValue(this)">
+   <input type="radio" id="H264" name="codec" value="H264" checked="checked" onchange="getCodecValue(this)">
    <label for="H.264">H.264</label><br>
    <input type="radio" id="H265" name="codec" value="H265" onchange="getCodecValue(this)">
    <label for="H.265">H.265</label><br>
-   <input type="radio" id="VP8"  name="codec" value="VP8" checked="checked" onchange="getCodecValue(this)">
+   <input type="radio" id="VP8"  name="codec" value="VP8" onchange="getCodecValue(this)">
    <label for="VP8">VP8</label><br>
    <input type="radio" id="VP9"  name="codec" value="VP9" onchange="getCodecValue(this)">
    <label for="VP9">VP9</label><br>
@@ -127,11 +127,11 @@
 
 <div id="modeButtons">
 <p>Scalability Mode:</p>
-   <input type="radio" id="L1T1" name="mode" value="L1T1" onchange="getModeValue(this)">
+   <input type="radio" id="L1T1" name="mode" value="L1T1" checked="checked" onchange="getModeValue(this)">
    <label for="L1T1">L1T1</label><br>
    <input type="radio" id="L1T2"  name="mode" value="L1T2" onchange="getModeValue(this)">
    <label for="L1T2">L1T2</label><br>
-   <input type="radio" id="L1T3"  name="mode" value="L1T3" checked="checked" onchange="getModeValue(this)">
+   <input type="radio" id="L1T3"  name="mode" value="L1T3" onchange="getModeValue(this)">
    <label for="L1T3">L1T3</label><br>
 </div>
 
@@ -166,7 +166,7 @@
 <br/></br>
 <button id="connect">Start</button>
 <button id="stop">Stop</button>
-<script src="https://cdn.plot.ly/plotly-2.18.2.min.js"></script>
+<script src="../third_party/plotly/plotly-2.18.2.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
