adding a priority note

--- a/index.src.html
+++ b/index.src.html
@@ -2235,6 +2235,9 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
     The User Agent <em class="rfc2119">MUST NOT</em> refuse the configuration
     if it doesn't support this content hint.
     See {{VideoEncoder/isConfigSupported()}}.
+
+    NOTE: Any codec-specific encoding options take precedence over
+      {{contentHint}}.
   </dd>
 
 </dl>
