Fix typos in [Video|Audio]Encoder.configure() description

--- a/index.src.html
+++ b/index.src.html
@@ -1055,7 +1055,7 @@ Methods {#audioencoder-methods}
   <dt><dfn method for=AudioEncoder>configure(config)</dfn></dt>
   <dd>
     [=Enqueues a control message=] to configure the audio encoder for
-    decoding chunks as described by |config|.
+    encoding audio data as described by |config|.
 
     NOTE: This method will trigger a {{NotSupportedError}} if the User Agent
         does not support |config|. Authors are encouraged to first check support
@@ -1429,7 +1429,7 @@ Methods {#videoencoder-methods}
   <dt><dfn method for=VideoEncoder>configure(config)</dfn></dt>
   <dd>
     [=Enqueues a control message=] to configure the video encoder for
-    decoding chunks as described by |config|.
+    encoding video frames as described by |config|.
 
     NOTE: This method will trigger a {{NotSupportedError}} if the User Agent
         does not support |config|. Authors are encouraged to first check support
