Assign [[format]] in VideoFrame ctor.
This fixes #509.

--- a/index.src.html
+++ b/index.src.html
@@ -3592,7 +3592,9 @@ dictionary VideoFrameMetadata {
     7. Let |colorSpace| be `undefined`.
     8. If |init|.{{VideoFrameBufferInit/colorSpace}} [=map/exists=], assign its
         value to |colorSpace|.
-    9. Assign the result of running the [=VideoFrame/Pick Color Space=]
+    9. Assign |init|'s {{VideoFrameBufferInit/format}} to
+        {{VideoFrame/[[format]]}}.
+    10. Assign the result of running the [=VideoFrame/Pick Color Space=]
         algorithm, with |colorSpace| and {{VideoFrame/[[format]]}}, to
         {{VideoFrame/[[color space]]}}.
     10. Assign the result of calling [=Copy VideoFrame metadata=]
