Fix misc whitespace issues

--- a/index.src.html
+++ b/index.src.html
@@ -2086,7 +2086,9 @@ run these steps:
     Configures the encoder to use a {{BitrateMode/constant}} or
     {{BitrateMode/variable}} bitrate as defined by [[MEDIASTREAM-RECORDING]].
 
-	NOTE: Not all audio codecs support specific {{BitrateMode}}s, Authors are encouraged to check by calling {{AudioEncoder/isConfigSupported()}} with |config|.
+    NOTE: Not all audio codecs support specific {{BitrateMode}}s, Authors are
+    encouraged to check by calling {{AudioEncoder/isConfigSupported()}} with
+    |config|.
   </dd>
 </dl>
 
@@ -3597,8 +3599,9 @@ dictionary VideoFrameMetadata {
     10. Assign the result of running the [=VideoFrame/Pick Color Space=]
         algorithm, with |colorSpace| and {{VideoFrame/[[format]]}}, to
         {{VideoFrame/[[color space]]}}.
-    10. Assign the result of calling [=Copy VideoFrame metadata=]
-        with |init|'s {{VideoFrameInit/metadata}} to |frame|.{{VideoFrame/[[metadata]]}}.
+    11. Assign the result of calling [=Copy VideoFrame metadata=]
+        with |init|'s {{VideoFrameInit/metadata}} to
+        |frame|.{{VideoFrame/[[metadata]]}}.
 22. Return |frame|.
 
 ### Attributes ###{#videoframe-attributes}
