Fix incorrect computation in Compute Layout and Allocation Size when figuring out the destination rect
This fixes #511.

--- a/index.src.html
+++ b/index.src.html
@@ -4093,10 +4093,12 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
             to the nearest integer.
         9. Set |computedLayout|'s [=computed plane layout/sourceLeftBytes=] to
             the result of the integer division of
-            truncated |parsedRect|.{{DOMRectInit/x}} by |sampleWidthBytes|.
+            truncated |parsedRect|.{{DOMRectInit/x}} by |sampleWidth|,
+            multiplied by |sampleBytes|.
         10. Set |computedLayout|'s [=computed plane layout/sourceWidthBytes=] to
             the result of the integer division of
-            truncated |parsedRect|.{{DOMRectInit/width}} by |sampleWidthBytes|.
+            truncated |parsedRect|.{{DOMRectInit/width}} by |sampleHeight|,
+            multiplied by |sampleBytes|.
         11. If |layout| is not `undefined`:
             1. Let |planeLayout| be the {{PlaneLayout}} in |layout| at position
                 |planeIndex|.
