--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -74,7 +74,7 @@ AudioDecoderConfig description {#audiodecoderconfig-description}
 {{AudioDecoderConfig/description}} can optionally set to an Identification
 Header, described in section 5.1 of [[OPUS-IN-OGG]].
 
-If a {{AudioDecoderConfig/description}} has been set, the bistream is assumed
+If a {{AudioDecoderConfig/description}} has been set, the bitstream is assumed
 to be in {{OpusBitstreamFormat/ogg}} format.
 
 If a {{AudioDecoderConfig/description}} has not been set, the bitstream is
