Use the correct size in "Output EncodedVideoChunks" algorithm when outputing decoder config

--- a/index.src.html
+++ b/index.src.html
@@ -1620,13 +1620,13 @@ Algorithms {#videoencoder-algorithms}
             |output|. Initialize |outputConfig| as follows:
             1. Assign `encoderConfig.codec` to `outputConfig.codec`.
             2. Assign `encoderConfig.width` to
-                `outputConfig.visibleRect.width`.
+                `outputConfig.codedWidth`.
             3. Assign `encoderConfig.height` to
-                `outputConfig.visibleRect.height`.
+                `outputConfig.codedHeight`.
             4. Assign `encoderConfig.displayWidth` to
-                `outputConfig.displayWidth`.
+                `outputConfig.displayAspectWidth`.
             5. Assign `encoderConfig.displayHeight` to
-                `outputConfig.displayHeight`.
+                `outputConfig.displayAspectHeight`.
             6. Assign the remaining keys of `outputConfig` as determined by
                 {{VideoEncoder/[[codec implementation]]}}. The User Agent
                 <em class="rfc2119">MUST</em> ensure that the configuration is
