More specific language around VideoFrameCopyToOptions.colorSpace

--- a/index.src.html
+++ b/index.src.html
@@ -4330,11 +4330,13 @@ will enforce the following requirements:
 :: A {{VideoPixelFormat}} for the pixel data in the destination
     {{BufferSource}}. Potential values are:
     {{RGBA}}, {{RGBX}}, {{BGRA}}, {{BGRX}} and values of {{VideoFrame/format}}.
-    If unspecified, the {{VideoFrame/format}} is used.
+    If unspecified or `null`, the {{VideoFrame/format}} is used.
 : <dfn dict-member for=VideoFrameCopyToOptions>colorSpace</dfn>
 :: A {{PredefinedColorSpace}} that <em class="rfc2119">SHALL</em> be used to as
     a target color space for for the pixel data in the destination
-    {{BufferSource}}. If unspecified, {{srgb}} is used.
+    {{BufferSource}}, but only if {{VideoFrameCopyToOptions/format}} is one of
+    {{RGBA}}, {{RGBX}}, {{BGRA}}, {{BGRX}}, otherwise it is ignored.
+    If unspecified or `null`, {{srgb}} is used.
 
 
 DOMRects in VideoFrame {#videoframe-domrect}
