Export clone video frame algorithm as it is useful in other specs like mediacapture transform

--- a/index.src.html
+++ b/index.src.html
@@ -4007,7 +4007,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
             |heightScale| and round the result. Assign the rounded result to
             |frame|'s {{VideoFrame/[[display height]]}}.
 
-: <dfn>Clone VideoFrame</dfn> (with |frame|)
+: <dfn export>Clone VideoFrame</dfn> (with |frame|)
 :: 1. Let |clone| be a new {{VideoFrame}} initialized as follows:
         1. Let |resource| be the [=media resource=] referenced by |frame|’s
             [[resource reference]].
