Fix oversight: assign resource to the resource reference when constructing a VideoFrame from a buffer
This fixes #772, thanks to Yahweasel for reporting.

--- a/index.src.html
+++ b/index.src.html
@@ -3615,6 +3615,7 @@ dictionary VideoFrameMetadata {
     11. Assign the result of calling [=Copy VideoFrame metadata=]
         with |init|'s {{VideoFrameInit/metadata}} to
         |frame|.{{VideoFrame/[[metadata]]}}.
+    12. Assign |resource| to {{VideoFrame/[[resource reference]]}}|.
 22. Return |frame|.
 
 ### Attributes ###{#videoframe-attributes}
