Add segments metadata entry that refers to https://w3c.github.io/mediacapture-extensions/#human-face-segmentation

--- a/video_frame_metadata_registry.src.html
+++ b/video_frame_metadata_registry.src.html
@@ -52,6 +52,17 @@ and has the following requirements:
 VideoFrameMetadata members {#videoframemetadata-members}
 ========================================================
 
+<table class='data'>
+  <tr>
+    <td>**member name**</td>
+    <td>**public specification**</td>
+  </tr>
+  <tr>
+    <td>segments</td>
+    <td>[Human face segmentation](https://w3c.github.io/mediacapture-extensions/#human-face-segmentation)</td>
+  </tr>
+</table>
+
 
 Privacy Considerations {#privacy-considerations}
 ================================================
