Fix html errors

--- a/samples/encode-decode-worker/index.html
+++ b/samples/encode-decode-worker/index.html
@@ -66,7 +66,7 @@
 <div id="rateInput">
   <label for="rate">bitrate: </label>
   <input type="text" name="rate" id="rate"
-      value=100000>
+      value=300000>
 </div>
 
 <div id="keyInput">
@@ -84,9 +84,9 @@
 <div id="codecButtons">
 <p>Codec:</p>
    <input type="radio" id="H264" name="codec" value="H264" checked="checked" onchange="getCodecValue(this)">
-   <label for="H.264">H.264</label><br>
+   <label for="H264">H.264</label><br>
    <input type="radio" id="H265" name="codec" value="H265" onchange="getCodecValue(this)">
-   <label for="H.265">H.265</label><br>
+   <label for="H265">H.265</label><br>
    <input type="radio" id="VP8"  name="codec" value="VP8" onchange="getCodecValue(this)">
    <label for="VP8">VP8</label><br>
    <input type="radio" id="VP9"  name="codec" value="VP9" onchange="getCodecValue(this)">
@@ -97,22 +97,22 @@
 
 <div id="encHwButtons">
 <p>Encoder Hardware Acceleration Preference:</p>
-   <input type="radio" id="hw" name="encHwAccel" value="prefer-hardware" onchange="getEncHwValue(this)">
-   <label for="hw">Prefer Hardware</label><br>
-   <input type="radio" id="sw"  name="encHwAccel" value="prefer-software" onchange="getEncHwValue(this)">
-   <label for="sw">Prefer Software</label><br>
-   <input type="radio" id="no-pref"  name="encHwAccel" value="no-preference" checked="checked" onchange="getEncHwValue(this)">
-   <label for="no-pref">No Preference</label><br>
+   <input type="radio" id="encHw" name="encHwAccel" value="prefer-hardware" onchange="getEncHwValue(this)">
+   <label for="encHw">Prefer Hardware</label><br>
+   <input type="radio" id="encSw"  name="encHwAccel" value="prefer-software" onchange="getEncHwValue(this)">
+   <label for="encSw">Prefer Software</label><br>
+   <input type="radio" id="encNo-pref"  name="encHwAccel" value="no-preference" checked="checked" onchange="getEncHwValue(this)">
+   <label for="encNo-pref">No Preference</label><br>
 </div>
 
 <div id="decHwButtons">
 <p>Decoder Hardware Acceleration Preference:</p>
-   <input type="radio" id="hw" name="decHwAccel" value="prefer-hardware" onchange="getDecHwValue(this)">
-   <label for="hw">Prefer Hardware</label><br>
-   <input type="radio" id="sw"  name="decHwAccel" value="prefer-software" onchange="getDecHwValue(this)">
-   <label for="sw">Prefer Software</label><br>
-   <input type="radio" id="no-pref"  name="decHwAccel" value="no-preference" checked="checked" onchange="getDecHwValue(this)">
-   <label for="no-pref">No Preference</label><br>
+   <input type="radio" id="decHw" name="decHwAccel" value="prefer-hardware" onchange="getDecHwValue(this)">
+   <label for="decHw">Prefer Hardware</label><br>
+   <input type="radio" id="decSw"  name="decHwAccel" value="prefer-software" onchange="getDecHwValue(this)">
+   <label for="decSw">Prefer Software</label><br>
+   <input type="radio" id="decNo-pref"  name="decHwAccel" value="no-preference" checked="checked" onchange="getDecHwValue(this)">
+   <label for="decNo-pref">No Preference</label><br>
 </div>
 
 <div id="prefButtons">
@@ -130,6 +130,7 @@
    <input type="radio" id="variable" name="bitPref" value="variable" checked="checked" onchange="getBitPrefValue(this)">
    <label for="variable">variable</label><br>
 </div>
+
 
 <div id="modeButtons">
 <p>Scalability Mode:</p>
