Add backgroundBlur to VideoFrameMetadata registry
See https://github.com/markafoltz/camera-effects for more info

--- a/video_frame_metadata_registry.src.html
+++ b/video_frame_metadata_registry.src.html
@@ -73,6 +73,10 @@ VideoFrameMetadata members {#videoframemetadata-members}
     <td>rtpTimestamp</td>
     <td>[RTP timestamp](https://w3c.github.io/mediacapture-extensions/#dom-videoframemetadata-rtptimestamp)</td>
   </tr>
+  <tr>
+    <td>backgroundBlur</td>
+    <td>[Camera dffect status](https://github.com/markafoltz/camera-effects)</td>
+  </tr>
 </table>
 
 
