--- a/video_frame_metadata_registry.src.html
+++ b/video_frame_metadata_registry.src.html
@@ -75,7 +75,7 @@ VideoFrameMetadata members {#videoframemetadata-members}
   </tr>
   <tr>
     <td>backgroundBlur</td>
-    <td>[Camera dffect status](https://github.com/markafoltz/camera-effects)</td>
+    <td>[Camera effect status](https://github.com/markafoltz/camera-effects)</td>
   </tr>
 </table>
 
