Fix unclosed dfn tags in WebCodecs spec

--- a/index.src.html
+++ b/index.src.html
@@ -499,7 +499,7 @@ Methods {#audiodecoder-methods}
     {{AbortError}} {{DOMException}}.
   </dd>
 
-  <dt><dfn method for=AudioDecoder>close()</df></dt>
+  <dt><dfn method for=AudioDecoder>close()</dfn></dt>
   <dd>
     Immediately aborts all pending work and releases [=system resources=].
     Close is final.
@@ -845,7 +845,7 @@ Methods {#videodecoder-methods}
     {{AbortError}} {{DOMException}}.
   </dd>
 
-  <dt><dfn method for=VideoDecoder>close()</df></dt>
+  <dt><dfn method for=VideoDecoder>close()</dfn></dt>
   <dd>
     Immediately aborts all pending work and releases [=system resources=].
     Close is final.
@@ -1184,7 +1184,7 @@ Methods {#audioencoder-methods}
     {{AbortError}} {{DOMException}}.
   </dd>
 
-  <dt><dfn method for=AudioEncoder>close()</df></dt>
+  <dt><dfn method for=AudioEncoder>close()</dfn></dt>
   <dd>
     Immediately aborts all pending work and releases [=system resources=].
     Close is final.
@@ -1560,7 +1560,7 @@ Methods {#videoencoder-methods}
     {{AbortError}} {{DOMException}}.
   </dd>
 
-  <dt><dfn method for=VideoEncoder>close()</df></dt>
+  <dt><dfn method for=VideoEncoder>close()</dfn></dt>
   <dd>
     Immediately aborts all pending work and releases [=system resources=].
     Close is final.
