Fix one more end tag typo.

--- a/index.src.html
+++ b/index.src.html
@@ -5344,7 +5344,7 @@ interface ImageDecoder {
 :: A boolean indicating whether {{ImageDecoder/[[encoded data]]}} is completely
     buffered.
 
-: <dfn attribute for=ImageDecoder>[[completed promise]]</dnf>
+: <dfn attribute for=ImageDecoder>[[completed promise]]</dfn>
 :: The promise used to signal when {{ImageDecoder/[[complete]]}} becomes
     `true`.
 
