Fix resource reference references.

--- a/index.src.html
+++ b/index.src.html
@@ -3104,7 +3104,7 @@ Note: It's expected that {{AudioDataInit}}'s {{AudioDataInit/data}}'s memory
     3. Let |resource| be the [=media resource=] referenced by
             |value|'s {{AudioData/[[resource reference]]}}.
     4. Let |newReference| be a new reference to |resource|.
-    5. Assign |newReference| to |serialized|.[[resource reference]].
+    5. Assign |newReference| to |serialized.resource reference|.
     6. For all remaining {{AudioData}} internal slots (excluding
         {{AudioData/[[resource reference]]}}) in |value|, assign the value of
         each internal slot to a field in |serialized| with the same name as the
@@ -3847,7 +3847,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     9. Let |planeLayouts| be a new [=list=].
     10. Enqueue the following steps to |copyStepsQueue|:
         1. Let resource be the [=media resource=] referenced by
-            [[resource reference]].
+            {{VideoFrame/[[resource reference]]}}.
         2. Let |numPlanes| be the number of planes as defined by
             {{VideoFrame/[[format]]}}.
         3. Let |planeIndex| be `0`.
@@ -4121,7 +4121,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
 : <dfn export>Clone VideoFrame</dfn> (with |frame|)
 :: 1. Let |clone| be a new {{VideoFrame}} initialized as follows:
         1. Let |resource| be the [=media resource=] referenced by |frame|’s
-            [[resource reference]].
+            {{VideoFrame/[[resource reference]]}}.
         2. Let |newReference| be a new reference to |resource|.
         3. Assign |newReference| to |clone|'s
             {{VideoFrame/[[resource reference]]}}.
@@ -4379,7 +4379,7 @@ The goal of this algorithm is to ensure that metadata owned by a {{VideoFrame}} 
     3. Let |resource| be the [=media resource=] referenced by
             |value|'s {{VideoFrame/[[resource reference]]}}.
     4. Let |newReference| be a new reference to |resource|.
-    5. Assign |newReference| to |serialized|.[[resource reference]].
+    5. Assign |newReference| to |serialized.resource reference|.
     6. For all remaining {{VideoFrame}} internal slots (excluding
         {{VideoFrame/[[resource reference]]}}) in |value|, assign the value of
         each internal slot to a field in |serialized| with the same name as the
