--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -8,7 +8,8 @@ Group: mediawg
 ED: https://w3c.github.io/webcodecs/codec_registry.html
 TR: https://www.w3.org/TR/webcodecs-codec-registry/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
-Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
+Editor: Eugene Zemtsov, w3cid 139375, Google LLC https://www.google.com/
+Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Boilerplate: omit conformance
