--- a/flac_codec_registration.src.html
+++ b/flac_codec_registration.src.html
@@ -8,7 +8,8 @@ Group: mediawg
 ED: https://w3c.github.io/webcodecs/flac_codec_registration.html
 TR: https://www.w3.org/TR/webcodecs-flac-codec-registration/
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
-Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
+Editor: Eugene Zemtsov, w3cid 139375, Google LLC https://www.google.com/
+Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
@@ -121,15 +122,15 @@ To check if an {{FlacEncoderConfig}} is valid, run these steps:
   <dt><dfn dict-member for=FlacEncoderConfig>blockSize</dfn></dt>
   <dd>
     Configures the number of samples to use per frame, of output {{EncodedAudioChunk}}s.
-    
+
     NOTE: Use 0 to let the encoder estimate a blocksize by default.
   </dd>
-  
+
   <dt><dfn dict-member for=FlacEncoderConfig>compressLevel</dfn></dt>
   <dd>
     Configures the compression level to use while encoding.
   </dd>
-  
+
 </dl>
 
 Privacy Considerations {#privacy-considerations}
