--- a/index.src.html
+++ b/index.src.html
@@ -8,8 +8,8 @@ Shortname: webcodecs
 Level: None
 Group: mediawg
 Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
-Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 Editor: Eugene Zemtsov, w3cid 139375, Google LLC https://www.google.com/
+Former Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.com/
 
 Abstract: This specification defines interfaces to codecs for encoding and
@@ -6326,3 +6326,5 @@ Wolenetz, Rijubrata Bhaumik, Thomas Guilbert, Tuukka Toivonen, and Youenn Fablet
 for their contributions to this specification. Thank you also to the many
 others who contributed to the specification, including through their
 participation on the mailing list and in the issues.
+
+The Working Group dedicates this specification to our colleague Bernard Aboba.
