Mark AVC i-frame w/ SEI recovery point as keyframes

--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -104,7 +104,7 @@ If an {{EncodedVideoChunk}}'s {{EncodedVideoChunk/[[type]]}} is
 {{EncodedVideoChunkType/key}}, and the bitstream is in
 {{AvcBitstreamFormat/avc}} format, then the {{EncodedVideoChunk}} is expected to
 contain a primary coded picture that is an instantaneous decoding refresh (IDR)
-picture.
+picture, or an I-frame with a recovery point SEI message.
 
 NOTE: If the bitstream is in {{AvcBitstreamFormat/avc}} format, parameter sets
     necessary for decoding are included in
@@ -114,8 +114,9 @@ If an {{EncodedVideoChunk}}'s {{EncodedVideoChunk/[[type]]}} is
 {{EncodedVideoChunkType/key}}, and the bitstream is in
 {{AvcBitstreamFormat/annexb}} format, then the {{EncodedVideoChunk}} is expected
 to contain both a primary coded picture that is an instantaneous decoding
-refresh (IDR) picture, and all parameter sets necessary to decode all video data
-NAL units in the {{EncodedVideoChunk}}.
+refresh (IDR) picture (or an I-frame with a recovery point SEI message), and all
+parameter sets necessary to decode all video data NAL units in the
+{{EncodedVideoChunk}}.
 
 VideoEncoderConfig extensions {#videoencoderconfig-extensions}
 ==============================================================
